<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Settings">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout1" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.959">

        <TextView
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:text="@string/To"
                android:textSize="18sp"
                android:layout_weight=".15"
                android:gravity="center_vertical"/>

        <EditText
                android:layout_width="0dp"
                android:layout_weight=".85"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_phone_number"
                android:textStyle="italic"
                android:ems="10"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:id="@+id/editNumber"
                android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout">

        <TextView
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:text="@string/message"
                android:textSize="18sp"
                android:layout_weight=".15"
                android:gravity="center_vertical"/>

        <EditText
                android:layout_width="0dp"
                android:layout_weight=".85"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:text="@string/enter_message"
                android:textStyle="italic"
                android:ems="10"
                android:id="@+id/editMessage"
                android:textSize="18sp"/>
    </LinearLayout>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/textView"
              android:textColor="@color/colorAccent"
              android:textSize="18sp"
              android:textStyle="bold"
              android:text="@string/missing_info"
              android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintVertical_bias="0.807" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:gravity="center_horizontal"/>

</android.support.constraint.ConstraintLayout>